frame/support/test/tests/benchmark_ui/missing_call.rs
use frame_benchmarking::v2::*;
#[allow(unused_imports)]
use frame_support_test::Config;

#[benchmarks]
mod benches {
	use super::*;

	#[benchmark]
	fn bench() {
		assert_eq!(2 + 2, 4);
	}
}

fn main() {}
